# ChalBe

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
chalbe/: __init__.py  commands.py
src/: __init__.py  ai_client.py  ai_prompts.py  commands.py  config.py  main.py  utils.py
tests/: conftest.py  test_commands.py
